--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 
 body {
     width: 100%;
-    min-width: 320px;
+    height: 100%;
+    display: flex;
 }
 
 
@@ -77,7 +78,10 @@ body {
 
 .content{
     position: absolute;
-    margin-left: 28%;
+    width: 100%;
+    height: 100%;
+    display: block;
+    
 }
     
 
@@ -94,15 +98,17 @@ body {
 
 
 .btn_wrap {
-    width: auto;
     height: auto;
-    left: 530px;
-    margin-right: 150px;
     text-align: center;
-    margin-top: 20%;
-    position: absolute;
-       
+    margin-top: 35%;
+    position: sticky;
+    width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 110%;
 }
+
 
 
 
@@ -195,6 +201,11 @@ body {
 
 .news_banner{
     position: absolute;
-    margin-top: 25%;
+    margin-top: 110%;
 
+}
+
+.save{
+    columns: 12;
+    offset: center;
 }
